about skills projects style

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,25 +1,25 @@
-<div class="welcome-section">
-    <div class="welcome_section_top">
-        <div class="welcome_section_top_left">
-            <div class="welcome_text_div">
-                <div class="left_to_right welcome_text">
+<div class="welcome-div">
+    <div class="welcome-top">
+        <div class="welcome-top-left">
+            <div class="welcome-text">
+                <div class="left-to-right">
                     <b>Hi,<br>
-                        I´m <span class="name">Valentina</span> Kuxhausen <br>
+                        I´m <span class="v">Valentina</span> Kuxhausen <br>
                         Guitarist and<br>
                         Front End Develop<span class="e">e</span>r</b>
                 </div>
             </div>
-            <div class="contact_btn_div">
-                <a href="#contact"> <button class="button_blue transition"><b>Contact Me</b></button>
+            <div class="btn-div">
+                <a href="#contact"> <button class="contact-button transition"><b>Contact Me</b></button>
                 </a>
             </div>
         </div>
-        <div class="welcome_section_top_right">
-            <img class="right_to_left main_picture" src="assets/img/kreis.png">
+        <div class="welcome-top-right">
+            <img class="profile-img" src="assets/img/kreis.png">
         </div>
     </div>
 
-    <div class="welcome_section_bottom">
+    <!-- <div class="welcome_section_bottom">
         <a href="#my_skills">
             <div class="magnetic_container">
                 <div class="magnetic_element">
@@ -28,6 +28,6 @@
                 <div class="magnetic_background"></div>
             </div>
         </a>
-    </div>
+    </div> -->
 
 </div>
