--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,4 @@
-<div id="contact" class="bgr-bright padding padding-top-bottom">
+<div id="contact" class="bgr-dark padding padding-top-bottom">
     <h1 class="center">CONTACT</h1>
     <span class="center">Get in touch to work together?</span>
 
