--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,8 +1,8 @@
-<footer>
+<footer class="bgr-bright">
 
 
     <!-- SOCIAL-WRAP -->
-    <div class="bgr-dark social-wrap padding">
+    <div class="bgr-bright social-wrap padding">
         <a _ngcontent-gqa-c30 target="_blank" href="https://www.linkedin.com/in/valentina-kuxhausen-6210a1227/">
             <img src="assets/img/linkedin.png">
         </a>
@@ -13,15 +13,15 @@
 
 
     <!-- DATA-WRAP -->
-    <div class="data-wrap">
+    <div class="bgr-bright data-wrap">
         <a href="#data-protection" routerLink="/data-protection">Data Protection</a>
         <a routerLink="/imprint">Imprint</a>
     </div>
 
 
     <!-- COPY-WRAP -->
-    <div class="copy-wrap">
-        <p>&copy; 2022 Valentina Kuxhausen</p>
+    <div class="bgr-bright copy-wrap">
+        <p>&copy; 2023 Valentina Kuxhausen</p>
     </div>
 
 
