--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,8 +1,7 @@
 <header class="bgr-dark fixed-nav padding">
 
     <div>
-        <!-- <a href="#home">HOME</a> -->
-        <a href="#my-skills">MY SKILLS</a>
+        <a href="#my-skills">SKILLS</a>
         <a href="#projects">PROJECTS</a>
         <a href="#contact">CONTACT</a>
     </div>
