--- a/src/styles.scss
+++ b/src/styles.scss
@@ -53,6 +53,7 @@ img:hover {
     cursor: pointer;
 }
 
-.single-project {
-    padding-bottom: 50px;
-}
+.transition {
+    transition: 225ms ease-in-out;
+  }
+  
