--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -72,22 +72,22 @@
 
 $size: 10rem;
 
-.welcome-section {
+.welcome-div {
     height: calc(100vh - 95px);
     color: white;
     background-color: #32465a;
     padding-top: 95px;
 }
 
-.welcome_section_top {
+.welcome-top {
     height: 70%;
     display: flex;
     justify-content: center;
 }
 
-.welcome_section_top_left {
-    .name {
-        color: var(--main-color);
+.welcome-top-left {
+    .v {
+        color: #a03ce2;
     }
 
     .e {
@@ -95,29 +95,19 @@ $size: 10rem;
     }
 }
 
-.magnetic_container {
-    display: none;
-}
-
-.welcome_text_div {
-    // padding-left: 210px;
+.welcome-text {
     height: 60%;
     display: flex;
     align-items: center;
     overflow: hidden;
 }
 
-.welcome_text {
-    font-size: 58px;
-}
-
-.contact_btn_div {
-    // padding-left: 210px;
+.btn-div {
     display: flex;
     align-items: center;
 }
 
-.button_blue {
+.contact-button {
     cursor: pointer;
     background-color: transparent;
     font-size: 18px;
@@ -136,9 +126,7 @@ $size: 10rem;
     }
 }
 
-.welcome_section_top_right {
-    // padding-right: 210px;
-    // padding-left: 64px;
+.welcome-top-right {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -146,16 +134,17 @@ $size: 10rem;
     padding-left: 90px;
 }
 
-.main_picture {
-    width: 450px;
-    height: 450px;
+.profile-img {
+    width: 300px;
+    height: 300px;
     border-radius: 50%;
     object-fit: cover;
     object-position: top;
     filter: grayscale(0.2);
+    cursor: default;
 }
 
-.welcome_section_bottom {
+.welcome-div-bottom {
     height: 30%;
     display: flex;
     justify-content: center;
@@ -163,74 +152,39 @@ $size: 10rem;
 }
 
 @media (max-width: 1500px) {
-    .welcome_text {
+    .welcome-text {
         font-size: 44px;
     }
 
-    .main_picture {
-        width: 370px;
-        height: 370px;
+    .profile-img {
+        width: 290px;
+        height: 290px;
     }
 
-}
-
-@media (min-width: 1200px) {
-    .magnetic_container {
-        cursor: pointer;
-        background-color: transparent;
-        position: relative;
-        padding: $size * 1.40;
-        margin: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        .magnetic_element {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 2;
-            width: $size * 0.50;
-            height: $size * 0.50;
-            pointer-events: none;
-        }
-
-        .magnetic_background {
-            background-color: transparent;
-            width: $size * 0.50;
-            height: $size * 0.50;
-            position: absolute;
-            z-index: 1;
-            border: 1px solid var(--secondary-color);
-            border-radius: 50%;
-            pointer-events: none;
-            box-shadow: 0px $size * 0.2 $size 0px rgba(var(--secondary-color-rgb), 0.95);
-        }
-    }
 }
 
 @media (max-width: 1045px) {
-    .welcome_text {
+    .welcome-text {
         font-size: 44px;
     }
 
-    .main_picture {
+    .profile-imge {
         width: 250px;
         height: 250px;
     }
 
-    .button_blue {
+    .contact-button {
         padding-left: 45px;
         padding-right: 45px;
     }
 
-    .welcome_text {
+    .welcome-text {
         font-size: 32px;
     }
 }
 
 @media (max-width: 850px) and (min-height: 600px) {
-    .welcome-section {
+    .welcome-div {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -239,29 +193,29 @@ $size: 10rem;
 
 @media (max-width: 850px) {
 
-    .welcome_text {
+    .welcome-text {
         font-size: 24px;
         text-align: center;
         margin-bottom: 16px;
     }
 
-    .welcome_section_top {
+    .welcome-div-top {
         flex-direction: column-reverse;
         align-items: center;
         height: 67%;
     }
 
-    .contact_btn_div {
+    .btn-div {
         padding-left: 0px;
         justify-content: center;
     }
 
-    .welcome_section_top_right {
+    .welcome-top-right {
         padding-right: 0;
         padding-left: 0;
     }
 
-    .welcome_text_div {
+    .welcome-text {
         padding-left: 0px;
         justify-content: center;
         padding-top: 15px;
@@ -272,25 +226,25 @@ $size: 10rem;
 
 @media (max-width: 1240px) and (orientation : landscape) {
 
-    .welcome_text_div {
+    .welcome-text {
         padding-left: 60px;
         font-size: 32px;
     }
 
-    .contact_btn_div {
+    .btn-div {
         padding-left: 60px;
     }
 
-    .welcome_section_top {
+    .welcome-div-top {
         flex-direction: unset;
 
     }
 
-    .welcome_section_top_right {
+    .welcome-top-right {
         padding-right: 60px;
     }
 
-    .welcome_text_div {
+    .welcome-text {
         padding-top: unset;
         padding-bottom: 4px;
     }
@@ -303,7 +257,7 @@ $size: 10rem;
 }
 
 @media (max-width: 480px) and (max-height: 480px) {
-    .main_picture {
+    .profile-img {
         width: 110px;
         height: 110px;
     }
@@ -312,7 +266,7 @@ $size: 10rem;
 
 @media (max-width: 480px) and (min-height: 1000px) {
 
-    .main_picture {
+    .profile-img {
         width: 200px;
         height: 200px;
     }
@@ -320,46 +274,37 @@ $size: 10rem;
 
 @media (max-width: 320px) {
 
-    .main_picture {
+    .profile-img {
         margin-top: 42px;
     }
 }
 
 @media (max-width: 480px) and (orientation : landscape) {
-    .welcome_section_top {
+    .welcome-div-top {
         height: unset;
     }
 
-    .welcome_text {
+    .welcome-text {
         font-size: 18px;
     }
 
-    .main_picture {
+    .profile-img {
         width: 140px;
         height: 140px;
     }
 
-    .button_blue {
+    .contact-button {
         padding-left: 20px;
         padding-right: 20px;
     }
 
-    .magnetic_container {
-        display: none;
-    }
 
 }
 
-.left_to_right {
+.left-to-right {
     position: relative;
     animation: slide_left 855ms ease-in-out;
     overflow: hidden;
-
-}
-
-.right_to_left {
-    position: relative;
-    animation: slide_right 855ms ease-in-out;
 }
 
 @keyframes slide_left {
