--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -5,7 +5,7 @@
 }
 
 span {
-    color: #a03ce2;
+    color: #04c2c9;
     margin-top: 50px;
     margin-bottom: 50px;
 }
@@ -44,7 +44,7 @@ span {
 }
 
 .button {
-    background-color: #a03ce2;
+    background-color: #04c2c9;
     padding: 8px;
     border: none;
     color: white;
@@ -52,6 +52,6 @@ span {
     cursor: pointer;
 
     &:hover {
-        box-shadow: 0 0 8px #a03ce2;
+        box-shadow: 0 0 8px #04c2c9;
     }
 }
