--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -1,71 +1,267 @@
-.project-wrap {
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    align-items: center;
-    padding-top: 48px;
-    opacity: 0.7;
-    width: 1500px;
-    border-bottom: #04c2c9;
+// .project-wrap {
+//     display: flex;
+//     justify-content: center;
+//     flex-direction: row;
+//     align-items: center;
+//     padding-top: 48px;
+//     opacity: 0.7;
+//     width: 1500px;
+//     border-bottom: #04c2c9;
 
     
-    &:hover {
-        opacity: 1;
+//     &:hover {
+//         opacity: 1;
 
-    }
+//     }
+// }
+
+// .img-wrap {
+//     display: flex;
+//     justify-content: center;
+//     flex-direction: row;
+//     align-items: center;
+
+//     img {
+//         width: 390px;
+//     }
+// }
+
+// .info-wrap {
+//     width: 60%;
+//     border-radius: 5%;
+//     padding-right: 32px;
+//     padding-left: 40px;
+//     font-size: 16px;
+//     display: flex;
+//     flex-direction: column;
+
+//     a {
+//         color: #04c2c9;
+//         text-decoration: none;
+//         padding-top: 12px;
+        
+//         &:hover {
+//             text-shadow: 0 0 4px  #04c2c9;
+//         }
+//     }
+// }
+
+// .project-name {
+//     font-size: 32px;
+//     padding-bottom: 12px;
+// }
+
+// .separate-project {
+//     background-color: #112233;
+//     height: 4px;
+//     display: flex;
+//     position: absolute;
+//     left: 369px;
+//     right: 0;
+
+// }
+
+// .font-türkis {
+//     color: #04c2c9;
+//     margin-top: 50px;
+//     margin-bottom: 50px;
+//     display: flex;
+//     justify-content: center;
+    
+// }
+
+$size: 10rem;
+
+h3 {
+    font-size: 24px;
+    color: white;
 }
 
-.img-wrap {
+.my-projects-div {
+    background-color: #32465a;
+}
+
+.div-distance {
+    padding-top: 48px;
+    padding-bottom: 48px;
+}
+
+.top-div {
+    height: 30%;
+}
+
+.my-projects-h {
+    color: white;
+    text-align: center;
+}
+
+.buttons-div {
     display: flex;
     justify-content: center;
-    flex-direction: row;
-    align-items: center;
+    margin-bottom: 18px;
+}
 
-    img {
-        width: 390px;
+.lila-button {
+    width: 150px;
+    background-color: transparent;
+    border: 2px solid;
+    border-color: #a03ce2;
+    color: #a03ce2;
+    font-size: 18px;
+    padding: 24px;
+    margin-left: 4px;
+    margin-right: 4px;
+    cursor: pointer;
+
+    &:hover {
+        color: white;
+        background-color: #a03ce2;    
+        border-color: #a03ce2;   
+        box-shadow: 0px $size * 0.3 $size 0px rgba(#a03ce2, 0.1);
     }
 }
 
-.info-wrap {
-    width: 60%;
-    border-radius: 5%;
-    padding-right: 32px;
-    padding-left: 40px;
-    font-size: 16px;
+.bottom-div {
+    height: 70%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.preview {
+    width: 1155px;
+    display: flex;
+    justify-content: center;
+}
+
+.toggle-hover {
+    color: white !important;
+    background-color: #a03ce2 !important;
+    border-color: #a03ce2 !important;
+}
+
+
+.skill-preview {
+    height: 310px;
+    min-width: 360px;
+    max-width: 360px;
+    position: relative;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    margin: 16px;
+    background-color: white;
+    opacity: 0.9;
+}
 
-    a {
-        color: #04c2c9;
-        text-decoration: none;
-        padding-top: 12px;
-        
-        &:hover {
-            text-shadow: 0 0 4px  #04c2c9;
-        }
+.desc-hidden {
+    width: 100%;
+    height: 100%;
+    padding-top: 32px;
+    opacity: 0;
+
+    &:hover {
+        opacity: 1;
+        background-color: rgba(255, 255, 255, 0.5)
     }
 }
 
-.project-name {
-    font-size: 32px;
-    padding-bottom: 12px;
+.try-button {
+    width: 150px;
+    border: 2px solid;
+    border-color: #a03ce2;
+    color: #a03ce2;
+    font-size: 18px;
+    margin-top: 30px;
+    padding: 24px;
+    margin-left: 4px;
+    margin-right: 4px;
+    cursor: pointer;
+
+    &:hover {
+        color: white;
+        background-color: #a03ce2;
+        border-color: #a03ce2;
+    }
 }
 
-.separate-project {
-    background-color: #32465a ;
-    height: 4px;
-    display: flex;
+.skill-preview-img {
     position: absolute;
-    left: 369px;
-    right: 0;
-
+    top: 0%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+    cursor: pointer;
 }
 
-.font-türkis {
-    color: #04c2c9;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    display: flex;
-    justify-content: center;
-    
+@media (max-width: 1500px) {
+    .preview {
+        width: 945px;
+        flex-wrap: wrap;
+    }
+}
+
+@media (max-width: 1040px) {
+    .preview {
+        width: 700px;
+    }
+}
+
+@media (max-width: 480px) {
+    .my-projects-h {
+        font-size: 28px;
+    }
+
+    .try-button {
+        padding: 16px;
+        margin-top: 12px;
+    }
+
+    .lila-button {
+        font-size: 16px;
+    }
+
+    .skill-preview {
+        min-width: 320px;
+        max-width: 320px;
+        margin-left: 8px;
+        margin-right: 8px;
+    }
+
+    .buttons-div{
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .lila-button {
+        padding: 8px;
+        font-size: 24px;
+        margin-bottom: 8px;
+    }
+
+    .skillpreview {
+        transform: scale(0.9);
+
+    }
+
+    .preview {
+        width: unset;
+    }
+}
+
+@media (max-width: 480px) and (orientation: landscape) {
+    .skill-preview {
+        height: 200px;
+    }
+}
+
+@media (max-width: 360px) {
+    .skill-preview {
+        min-width: 260px;
+        max-width: 260px;
+    }
 }
