--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,4 @@
-<div class="welcome-div">
+<div id="about" class="bgr-dark welcome-div">
     <div class="welcome-top">
         <div class="welcome-top-left">
             <div class="welcome-text">
@@ -18,16 +18,4 @@
             <img class="profile-img" src="assets/img/kreis.png">
         </div>
     </div>
-
-    <!-- <div class="welcome_section_bottom">
-        <a href="#my_skills">
-            <div class="magnetic_container">
-                <div class="magnetic_element">
-                    <img class="" src="assets/img/arrow.png">
-                </div>
-                <div class="magnetic_background"></div>
-            </div>
-        </a>
-    </div> -->
-
 </div>
