--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,86 +1,14 @@
-// .about-wrap {
-//     display: flex;
-//     justify-content: center;
-//     flex-direction: row;
-//     align-items: center;
-// } 
-
-// .profile-wrap {
-//     width: 50%;
-//     display: flex;
-//     flex-direction: column;
-//     align-items: center;
-
-
-//     img {
-//         width: 250px;
-//         height: 250px;
-//         border-radius: 50%;
-//         object-fit: contain;
-//         cursor:default;
-//     }
-//     h2 {
-//         font-size: 24px;
-//     }
-//     p {
-//         text-align: center;
-//         width: 70%;
-//         font-size: 20px;
-//         line-height: 24px;
-//     }
-
-//     strong {
-//         color: #a03ce2;
-//     }
-
-// }
-
-// .left_to_right {
-//     position: relative;
-//     animation: slide_left 855ms ease-in-out;
-//     overflow: hidden;
-// }
-
-// .skills-wrap {
-//     width: 50%;
-//     border-radius: 5%;
-//     padding-left: 32px;
-//     font-size: 16px;
-// }
-
-// // ANIMATION
-
-// .skill-fly {
-//     animation: skill-fly-animation 1.5s ease-in-out;
-//     transform: scale(1) translateX(280px);
-//  }
-
-// @keyframes skill-fly-animation {
-//     0% {
-//         transform: scale(1);
-//     }
-//     33% {
-//         transform: scale(1.33);
-//     }
-//     66% {
-//         transform: scale(1.66);
-//     }
-//     100% {
-//         transform: scale(1) translateX(280px);
-//     }
-// }
-
 $size: 10rem;
 
 .welcome-div {
-    height: calc(100vh - 95px);
+    height: 100vh;
     color: white;
-    background-color: #32465a;
     padding-top: 95px;
+    padding: 8px;
 }
 
 .welcome-top {
-    height: 70%;
+    height: 100vh;
     display: flex;
     justify-content: center;
 }
@@ -100,6 +28,7 @@ $size: 10rem;
     display: flex;
     align-items: center;
     overflow: hidden;
+    font-size: 44px;
 }
 
 .btn-div {
@@ -142,6 +71,11 @@ $size: 10rem;
     object-position: top;
     filter: grayscale(0.2);
     cursor: default;
+    position: relative;
+    animation: slide_right 855ms ease-in-out;
+    overflow: hidden;
+    padding: 8px;
+
 }
 
 .welcome-div-bottom {
