--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -1,6 +1,6 @@
 <div id="my-skills" class="my-skills-div div-distance">
     <div class="top-div">
-        <h1 class="my-skills-h">MY SKILLS</h1>
+        <h1 data-aos="flip-right" data-aos-duration="800" class="my-skills-h">MY SKILLS</h1>
     </div>
 
     <div class="bottom-div">
