--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -1,14 +1,17 @@
-<div class="bgr-bright padding padding-top-bottom">
-    <h1>Impressum</h1>
-    <p>Angaben gemäß § 5 TMG</p>
-    <p>Valentina Kuxhausen <br>
-        Am Ziegenberg 93<br>
-        34128 Kassel <br></p>
+<div class="bgr-bright center padding-top-bottom column">
+    <h1>Impressum</h1> <br>
 
-    <p> <strong>Vertreten durch: </strong><br>
-        Valentina Kuxhausen<br></p>
+    <p><strong>Vertreten gemäß § 5 TMG durch:</strong></p>   
 
-    <p><strong>Kontakt:</strong> <br>
-        Telefon: 0049-17658863084<br>
-        E-Mail: <a href='mailto:valentina.kuxhausen@web.de'>valentina.kuxhausen@web.de</a></p>
+    <p>Valentina Kuxhausen</p>  
+
+    <p>Am Ziegenberg 93</p> 
+
+    <p>34128 Kassel</p>  
+
+    <p><strong>Kontakt:</strong> 
+
+    <p>Telefon: 0049-17658863084</p>    
+
+    <p>E-Mail: <a href='mailto:valentina.kuxhausen@web.de'>valentina.kuxhausen@web.de</a></p>
 </div>
