--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,7 @@
-<header class="bgr-dark fixed-nav padding">
+<header class="bgr-dark fixed-nav">
 
     <div>
+        <a href="#about">HOME</a>
         <a href="#my-skills">SKILLS</a>
         <a href="#projects">PROJECTS</a>
         <a href="#contact">CONTACT</a>
