--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -7,8 +7,7 @@ header {
     z-index: 1;
     align-items: center;
     justify-content: center;
-    border-bottom: 3.5px solid #04c2c9;
-    background-color: #112233;
+    background-color: #050b11;
     
     a {
         text-decoration: none;
@@ -48,3 +47,5 @@ header {
     z-index: 5;
     height: 50px;
 }
+
+// TODO: @media
