--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -1,75 +1,3 @@
-// .project-wrap {
-//     display: flex;
-//     justify-content: center;
-//     flex-direction: row;
-//     align-items: center;
-//     padding-top: 48px;
-//     opacity: 0.7;
-//     width: 1500px;
-//     border-bottom: #04c2c9;
-
-    
-//     &:hover {
-//         opacity: 1;
-
-//     }
-// }
-
-// .img-wrap {
-//     display: flex;
-//     justify-content: center;
-//     flex-direction: row;
-//     align-items: center;
-
-//     img {
-//         width: 390px;
-//     }
-// }
-
-// .info-wrap {
-//     width: 60%;
-//     border-radius: 5%;
-//     padding-right: 32px;
-//     padding-left: 40px;
-//     font-size: 16px;
-//     display: flex;
-//     flex-direction: column;
-
-//     a {
-//         color: #04c2c9;
-//         text-decoration: none;
-//         padding-top: 12px;
-        
-//         &:hover {
-//             text-shadow: 0 0 4px  #04c2c9;
-//         }
-//     }
-// }
-
-// .project-name {
-//     font-size: 32px;
-//     padding-bottom: 12px;
-// }
-
-// .separate-project {
-//     background-color: #112233;
-//     height: 4px;
-//     display: flex;
-//     position: absolute;
-//     left: 369px;
-//     right: 0;
-
-// }
-
-// .font-türkis {
-//     color: #04c2c9;
-//     margin-top: 50px;
-//     margin-bottom: 50px;
-//     display: flex;
-//     justify-content: center;
-    
-// }
-
 $size: 10rem;
 
 h3 {
@@ -78,16 +6,12 @@ h3 {
 }
 
 .my-projects-div {
-    background-color: #32465a;
+    background-color: #1c2733;
 }
 
 .div-distance {
-    padding-top: 48px;
-    padding-bottom: 48px;
-}
-
-.top-div {
-    height: 30%;
+    padding-top: 128px;
+    height: 100vh;
 }
 
 .my-projects-h {
@@ -122,7 +46,6 @@ h3 {
 }
 
 .bottom-div {
-    height: 70%;
     display: flex;
     justify-content: center;
     align-items: center;
