--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,13 +8,17 @@ html {
     scroll-behavior: smooth;
 }
 
+a {
+    color: white;
+}
+
 .bgr-dark {
-    background-color: #112233;
+    background-color: #050b11;
     color: white;
 }
 
 .bgr-bright {
-    background-color: #32465a;
+    background-color: #1c2733;
     color: white;
 }
 
@@ -41,12 +45,12 @@ h1 {
 .center {
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .column {
     display: flex;
     flex-direction: column;
-    // align-items: center;
 }
 
 img:hover {
@@ -55,5 +59,6 @@ img:hover {
 
 .transition {
     transition: 225ms ease-in-out;
-  }
-  
+}
+
+// TODO: @media
