--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,19 +1,27 @@
 <div id="about" class="bgr-dark welcome-div">
     <div class="welcome-top">
+
+
         <div class="welcome-top-left">
-            <div class="welcome-text">
-                <div class="left-to-right">
-                    <b>Hi,<br>
-                        I´m <span class="v">Valentina</span> Kuxhausen <br>
-                        Guitarist and<br>
-                        Front End Develop<span class="e">e</span>r</b>
-                </div>
+
+
+            <div class="welcome-text left-to-right">
+                <b>Hi,<br>
+                    I´m <span class="v">Valentina</span> Kuxhausen <br>
+                    Guitarist and<br>
+                    Front End Develop<span class="e">e</span>r</b>
             </div>
+
+
             <div class="btn-div">
                 <a href="#contact"> <button class="contact-button transition"><b>Contact Me</b></button>
                 </a>
             </div>
+
+
         </div>
+
+        
         <div class="welcome-top-right">
             <img class="profile-img" src="assets/img/kreis.png">
         </div>
