--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -12,7 +12,8 @@
                 <h4>Name</h4>
                 <input 
                 name="name" 
-                required class="input contact-fields" 
+                required 
+                class="input contact-fields" 
                 placeholder="Enter your Name" 
                 type="text">
             </div>
