--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -11,7 +11,7 @@ h3 {
 
 .div-distance {
     padding-top: 128px;
-    height: 100vh;
+    padding-bottom: 48px;
 }
 
 .my-projects-h {
@@ -50,6 +50,7 @@ h3 {
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    padding-top: 32px;
 }
 
 .preview {
