projects images links

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -48,3 +48,6 @@
         </form>
     </div>
 </div>
+
+<!-- show Service um componente auszublenden und anzuzeiugen -->
+<app-contact-success disabled *ngIf=""></app-contact-success>
