--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -9,26 +9,52 @@
             <div data-aos="zoom-in-right" data-aos-duration="800" class="skill-preview">
                 <div class="desc-hidden">
                     <h3>Join</h3>
-                    <p>Kanbanboard (developed with JavaScript)</p>
-                    <a href="http://valentina-kuxhausen.developerakademie.net/gruppenarbeit-174/addtask.html" target="_blank">
+                    <p>Kanbanboard (developed with <strong>JavaScript</strong>)</p>
+                    <a href="http://valentinakuxhausen.com/join.valentinakuxhausen.com/addtask.html" target="_blank">
                         <button class="try-button">Try Out</button></a>
                     <a href="https://github.com/LorenzFuchs/gruppenarbeit-174" target="_blank">
                         <button class="try-button">GitHub</button></a>
                 </div>
-                <img class="skill-preview-img" src="">
+                <img class="skill-preview-img" src="assets/img/join169.png">
             </div>
 
 
             <div data-aos="zoom-in-right" data-aos-duration="800" class="skill-preview">
                 <div class="desc-hidden">
                     <h3>Ring of Fire</h3>
-                    <p>Cardgame (developed with Angular)</p>
-                    <a href="http://ringoffire.valentinakuxhausen.com" target="_blank">
+                    <p>Cardgame (developed with <strong>Angular</strong>)</p>
+                    <a href="http://valentinakuxhausen.com/ringoffire.valentinakuxhausen.com/index.html" target="_blank">
                         <button class="try-button">Try Out</button></a>
                     <a href="https://github.com/ValentinaKuxhausen/Ring-Of-Fire" target="_blank">
                         <button class="try-button">GitHub</button></a>
                 </div>
-                <img class="skill-preview-img" src="">
+                <img class="skill-preview-img" src="assets/img/ring_of_fire169.png">
+            </div>
+
+
+            <div data-aos="zoom-in-right" data-aos-duration="800" class="skill-preview">
+                <div class="desc-hidden">
+                    <h3>Pokedex</h3>
+                    <p>Famous Pokemon Lexicon (developed with <strong>JavaScript</strong> using <strong>Rest API</strong>)</p>
+                    <a href="http:///valentinakuxhausen.com/pokedex.valentinakuxhausen.com/index.html" target="_blank">
+                        <button class="try-button">Try Out</button></a>
+                    <a href="https://github.com/ValentinaKuxhausen/Pokedex" target="_blank">
+                        <button class="try-button">GitHub</button></a>
+                </div>
+                <img class="skill-preview-img" src="assets/img/pokedex.png">
+            </div>
+
+
+            <div data-aos="zoom-in-right" data-aos-duration="800" class="skill-preview">
+                <div class="desc-hidden">
+                    <h3>El Pollo Loco</h3>
+                    <p>Jump & Run Game (developed with <strong>JavaScript</strong>)</p>
+                    <a href="http:///valentinakuxhausen.com/elpolloloco.valentinakuxhausen.com/index.html" target="_blank">
+                        <button class="try-button">Try Out</button></a>
+                    <a href="https://github.com/ValentinaKuxhausen/El-Pollo-Loco" target="_blank">
+                        <button class="try-button">GitHub</button></a>
+                </div>
+                <img class="skill-preview-img" src="assets/img/el_pollo_loco169.png">
             </div>
 
 
