--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -29,6 +29,7 @@ $size: 10rem;
     align-items: center;
     overflow: hidden;
     font-size: 44px;
+    padding-top: 128px;
 }
 
 .btn-div {
@@ -61,6 +62,7 @@ $size: 10rem;
     align-items: center;
     overflow-x: inherit;
     padding-left: 90px;
+    padding-top: 128px;
 }
 
 .profile-img {
