--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -39,26 +39,27 @@
 }
 
 .skill-element-div {
-    min-width: 340px;
-    height: 150px;
+    min-width: 300px;
+    height: 130px;
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: white;
-    border-radius: 5%;
-    font-size: 20px;
+    border-radius: 10px;
+    font-size: 16px;
     text-align: center;
     font-weight: bold;
     margin-top: 40px;
     margin-bottom: 40px;
     margin-right: 20px;
     margin-left: 20px;
+    box-shadow: 0px 3px 3px 0px black;
 
 }
 
 .icon-circle {
     display: flex;
-    box-shadow: 1px 1px 10px 0px rgba(0, 0, 0, 0.3);
+    box-shadow: 1px 1px 10px 0px rgba(0, 0, 0, 0.5);
     justify-content: center;
     align-items: center;
     width: 70px;
