--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -2,7 +2,13 @@ $size: 10rem;
 
 h3 {
     font-size: 24px;
-    color: white;
+    color: #a03ce2;
+    text-shadow: white;
+}
+
+p {
+    color: #1c2733;
+    font-weight: 500;
 }
 
 .my-projects-div {
@@ -11,7 +17,7 @@ h3 {
 
 .div-distance {
     padding-top: 128px;
-    padding-bottom: 48px;
+    padding-bottom: 88px;
 }
 
 .my-projects-h {
@@ -67,9 +73,8 @@ h3 {
 
 
 .skill-preview {
-    height: 310px;
-    min-width: 360px;
-    max-width: 360px;
+    width: 420px;
+    height: 245px;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -81,45 +86,47 @@ h3 {
     opacity: 0.9;
 }
 
-.desc-hidden {
-    width: 100%;
-    height: 100%;
-    padding-top: 32px;
-    opacity: 0;
-
-    &:hover {
-        opacity: 1;
-        background-color: rgba(255, 255, 255, 0.5)
-    }
-}
-
-.try-button {
-    width: 150px;
-    border: 2px solid;
-    border-color: #a03ce2;
-    color: #a03ce2;
-    font-size: 18px;
-    margin-top: 30px;
-    padding: 24px;
-    margin-left: 4px;
-    margin-right: 4px;
-    cursor: pointer;
-
-    &:hover {
-        color: white;
-        background-color: #a03ce2;
-        border-color: #a03ce2;
-    }
-}
-
 .skill-preview-img {
     position: absolute;
-    top: 0%;
     width: 100%;
     height: 100%;
     object-fit: cover;
     z-index: -1;
     cursor: pointer;
+
+}
+
+.desc-hidden {
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+
+    &:hover {
+        opacity: 1;
+        background-color: rgba(255, 255, 255, 0.6);
+    }
+}
+
+.try-button {
+    width: 150px;
+    font-size: 18px;
+    border-color: #a03ce2;
+    border: 2px solid;
+    color: #a03ce2;
+    font-weight: bold;
+    margin-top: 30px;
+    padding: 24px;
+    margin-left: 4px;
+    margin-right: 4px;
+    cursor: pointer;
+    background-color: transparent;
+
+    &:hover {
+        background-color: #a03ce2;
+        color: white;
+        border-color: #a03ce2;
+        font-weight: normal;
+    }
 }
 
 @media (max-width: 1500px) {
