--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -8,7 +8,7 @@
         method="POST" 
         class="column-contact">
 
-            <div>
+            <div class="input-width">
                 <h4>Name</h4>
                 <input 
                 name="name" 
@@ -18,7 +18,7 @@
                 type="text">
             </div>
 
-            <div>
+            <div class="input-width">
                 <h4>E-Mail</h4>
                 <input 
                 name="email" 
@@ -28,7 +28,7 @@
                 type="email">
             </div>
 
-            <div>
+            <div class="input-width">
                 <h4>Message</h4>
                 <textarea
                 name="message" 
