--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="bgr-bright">
-    <div class="bgr-bright social-wrap padding">
+    <div class="bgr-bright social-wrap">
         <a _ngcontent-gqa-c30 target="_blank" href="https://www.linkedin.com/in/valentina-kuxhausen-6210a1227/">
             <img src="assets/img/linkedin.png">
         </a>
