--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -58,4 +58,11 @@ footer {
     }
 }
 
-// TODO: @media
+
+@media (max-width: 1500px) {
+    .social-wrap  {
+        width: 100%;
+        right: 0;
+        left: 0;
+    }
+}
