--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -28,6 +28,13 @@ header {
     }
 }
 
+.fixed-nav {
+    position: fixed;
+    top: 0;
+    z-index: 5;
+    height: 80px;
+}
+
 .darkLinks {
     a {
         color: black;
@@ -41,11 +48,13 @@ header {
     box-shadow: 0 1px 3px 0 black(0,0,0,0.2);
 }
 
-.fixed-nav {
-    position: fixed;
-    top: 0;
-    z-index: 5;
-    height: 80px;
+
+@media (max-width: 1500px) {
+    .fixed-nav {
+        width: 100%;
+        right: 0;
+        left: 0;
+    }
+
 }
 
-// TODO: @media
