--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -11,6 +11,8 @@
             <div class="input-width">
                 <h4>Name</h4>
                 <input 
+                data-aos="fade-right" data-aos-duration="800"
+                class="input-width"
                 name="name" 
                 required 
                 class="input contact-fields" 
@@ -21,6 +23,8 @@
             <div class="input-width">
                 <h4>E-Mail</h4>
                 <input 
+                data-aos="fade-right" data-aos-duration="800"
+                class="input-width"
                 name="email" 
                 required 
                 class="input contact-fields" 
@@ -31,6 +35,8 @@
             <div class="input-width">
                 <h4>Message</h4>
                 <textarea
+                data-aos="fade-right" data-aos-duration="800"
+                class="input-width"
                 name="message" 
                 required
                 class="input contact-fields" 
@@ -39,7 +45,9 @@
                 ></textarea>
                 </div>
 
-            <div class="send-btn-div">
+            <div 
+            data-aos="fade-right" data-aos-duration="800"
+            class="send-btn-div">
                 <button (click)="form.submit()" 
                 type="submit" 
                 class="transition tuerkis-button">Send
