--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,16 +1,18 @@
 <footer class="bgr-bright">
-    <div class="bgr-bright social-wrap">
-        <a _ngcontent-gqa-c30 target="_blank" href="https://www.linkedin.com/in/valentina-kuxhausen-6210a1227/">
-            <img src="assets/img/linkedin.png">
-        </a>
-        <a _ngcontent-gqa-c30 target="_blank" href="https://github.com/ValentinaKuxhausen">
-            <img src="assets/img/github.png">
-        </a>
-    </div>
+    <div class="social-data">
+        <div class="bgr-bright social-wrap">
+            <a _ngcontent-gqa-c30 target="_blank" href="https://www.linkedin.com/in/valentina-kuxhausen-6210a1227/">
+                <img src="assets/img/linkedin.png">
+            </a>
+            <a _ngcontent-gqa-c30 target="_blank" href="https://github.com/ValentinaKuxhausen">
+                <img src="assets/img/github.png">
+            </a>
+        </div>
 
-    <div class="bgr-bright data-wrap">
-        <a href="#data-protection" routerLink="/data-protection">Data Protection</a>
-        <a routerLink="/imprint">Imprint</a>
+        <div class="bgr-bright data-wrap">
+            <!-- <a href="#data-protection" routerLink="/data-protection">Data Protection</a> -->
+            <a routerLink="/imprint">Legal Notice</a>
+        </div>
     </div>
 
     <div class="bgr-bright copy-wrap">
