--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -1,4 +1,4 @@
-<div class="bgr-bright center padding-top-bottom column">
+<div class="bgr-bright imprint-container center column">
     <h1>Impressum</h1> <br>
 
     <p><strong>Vertreten gemäß § 5 TMG durch:</strong></p>   
