--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -1,12 +1,8 @@
-// body {
-//     margin: 0;
-//     font-family: 'Montserrat', sans-serif;
-//     scroll-behavior: smooth;
-// }
+.imprint-container {
+    height: 100vh;
+    scroll-margin: 0;
+}
 
-// body {
-//     height: calc(100vh - 10vh);
-// }
 
 // @media (max-width: 1500px) {
 //     body {
