--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -32,7 +32,7 @@
             </div>
 
 
-            <div data-aos="zoom-in-right" data-aos-duration="800" class="skill-preview">
+            <!-- <div data-aos="zoom-in-right" data-aos-duration="800" class="skill-preview">
                 <div class="desc-hidden">
                     <h3>Pokedex</h3>
                     <p>Famous Pokemon Lexicon (developed with <strong>JavaScript</strong> using <strong>Rest API</strong>)</p>
@@ -56,7 +56,7 @@
                 </div>
                 <img class="skill-preview-img" src="assets/img/el_pollo_loco169.png">
             </div>
-
+ -->
 
         </div>
     </div>
