--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -27,6 +27,10 @@ footer {
         background-color: #050b11;
         padding: 12px;
         transition: 225ms all ease-in-out;
+
+        &:hover {
+            transform: scale(1.25);
+          }
     }
 
 }
@@ -64,5 +68,29 @@ footer {
         width: 100%;
         right: 0;
         left: 0;
+    }
+
+    @media (max-width: 376px) {
+        footer {
+            padding: 0;
+
+        }
+
+        .social-data {
+            display: flex;
+            flex-direction: row;
+        }
+
+        .data-wrap {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: 0;
+            width: 250px;
+        }
+
+        .social-wrap {
+            margin: 0;
+        }
     }
 }
