--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,10 +1,10 @@
-<header class="bgr-dark fixed-nav">
+<!-- <header > -->
 
-    <div>
+    <div class="bgr-dark fixed-nav">
         <a href="#about">HOME</a>
         <a href="#my-skills">SKILLS</a>
         <a href="#projects">PROJECTS</a>
         <a href="#contact">CONTACT</a>
     </div>
 
-</header>
+<!-- </header> -->
